# server-tools

./: .copier-answers.yml  .copier-answers_BACKUP_480126.yml  .copier-answers_LOCAL_480270.yml  .coveragerc  .flake8  .gitignore  .gitmodules  .hgignore  .hgtags  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .pylintrc  .pylintrc-mandatory  .spellcheck.yml  .travis.yml  LICENSE  README.md  README.rst  __init__.py  __manifest__.py  __openerp__.py  auth_saml_data.xml  auth_saml_view.xml  base_fontawesome_js_svg.7z  docker-compose.yml  oca_dependencies.txt  requirement.txt  requirements.txt  res_config.xml  res_users.xml  sale.py  sale_exception_data.xml  test-requirements.txt
account_enterprise_remove/: README.rst  __openerp__.py
active_previous_actived_cron/: README.rst  __manifest__.py
admin_technical_features/: README.rst  __init__.py  __manifest__.py  __openerp__.py  res_groups.xml
analytic_structure/: MetaAnalytic.py  NEWS  NEWS.fr  README  README.rst  __init__.py  __openerp__.py  analytic_code.py  analytic_dimension.py  analytic_dimension.xml  analytic_menus.xml  analytic_structure.py  analytic_views.xml
api_foreach/: README.rst  __init__.py  __manifest__.py  api.py
attachment_base_synchronize/: README.rst  __manifest__.py  __openerp__.py
attachment_delete_restrict/: README.rst  __manifest__.py  hooks.py
attachment_metadata/: README.rst  __init__.py  __openerp__.py  attachment.py  attachment_view.xml
attachment_queue/: README.rst  __manifest__.py
attachment_queue_email/: README.rst  __manifest__.py
attachment_restrict_deletion/: __manifest__.py
attachment_sync_dropbox/: README.rst  __manifest__.py
attachment_sync_gdrive/: README.rst  __manifest__.py
attachment_sync_s3/: README.rst  __manifest__.py
attachment_synchronize/: README.rst  __manifest__.py
attachment_synchronize_record/: README.rst  __manifest__.py
attachment_unindex_content/: README.rst  __manifest__.py  hooks.py
auditlog/: AUTHORS.txt  README.rst  __init__.py  __manifest__.py  __openerp__.py
auditlog_async/: README.rst  __init__.py  __openerp__.py
auditlog_easy_config/: .gitignore  README.rst  __init__.py  __openerp__.py
auditlog_report/: __init__.py  __manifest__.py
auditlog_security/: README.rst  __manifest__.py
auth_admin_passkey/: README.rst  __init__.py  __manifest__.py  __openerp__.py
auth_brute_force/: README.rst  __init__.py  __manifest__.py  __openerp__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+12247 files in other folders)
